--- a/app/src/Components/ListPropertyPages/Page4.css
+++ b/app/src/Components/ListPropertyPages/Page4.css
@@ -1,12 +1,11 @@
 .create-a-property-9ES {
   border-radius: 6.4478rem;
-  box-shadow: 0 0.0321rem 0.1427rem rgba(0, 0, 0, 0.0421718433), 0 0.0772rem 0.343rem rgba(0, 0, 0, 0.0605839156), 0 0.1453rem 0.6459rem rgba(0, 0, 0, 0.075000003), 0 0.2592rem 1.1522rem rgba(0, 0, 0, 0.0894160867), 0 0.4849rem 2.155rem rgba(0, 0, 0, 0.1078281552), 0 1.1606rem 5.1582rem rgba(0, 0, 0, 0.150000006);
-  flex-shrink: 0;
-  height: 46.295rem;
-  margin: 0rem 6.221rem 43.705rem 0rem;
-  position: relative;
-  width: 39.5249rem;
-
+  display: flex;
+  width: 100%;
+  border: none;
+  flex-direction: column;
+  align-items: start;
+  height:46.295rem;
   .rectangle-13-EFt {
     background-color: #ffffff;
     border-radius: 1.9666rem;
@@ -290,13 +289,13 @@
   display: flex;
   font-family: Roboto, 'Source Sans Pro';
   font-size: 1.3669rem;
-  font-weight: 400;
+  font-weight: 800;
   height: 0.3845rem;
   justify-content: center;
   left: 4.1266rem;
   line-height: 1.1725;
   position: absolute;
-  top: 41.4299rem;
+  top: 43.4299rem;
   white-space: nowrap;
   width: 31.0782rem;
 }
